2주차 server update

--- a/Yuhan/2주차/index.html
+++ b/Yuhan/2주차/index.html
@@ -3,17 +3,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Yuhan PHP 2주차</title>
-  <style>
-  body { text-align: center;}
-  </style>
+    <title>Yuhan PHP</title>
   </head>
 
   <body>
     <hr><br>
-    <pre><h3> 웹프로그래밍 2주차</h3> - 201907033 김혜인 - </pre><br>
+    <pre><h3> 웹프로그래밍</h3> - 201907033 김혜인 - </pre><br>
     <hr>
-    <img src="indeximg.PNG" alt="이미지" width="300" height="200"/>
+    <ul>
+    <li><a href="indeximg.PNG">2주차</a></li>
+    <li><a href="test.php">3주차</a></li>
+    </ul>
     <hr>
     <PRE>
       <h3>< 주의 사항 ></h3>    - Unix 서버에서는 대소문자 구분함
