--- a/Yuhan/index.html
+++ b/Yuhan/index.html
@@ -13,6 +13,9 @@
     <ul>
     <li><a href="indeximg.PNG">2주차</a></li>
     <li><a href="test.php">3주차</a></li>
+    <li><a href="p3-2.html">4주차예제</a></li>
+    <li><a href="p3-2_a.html">4주차심화</a></li>
+    <li><a href="p3-3.php">4주차(p3-3.php)</a></li>
     </ul>
     <hr>
     <PRE>
