--- a/Yuhan/index.html
+++ b/Yuhan/index.html
@@ -9,23 +9,6 @@
   <body>
     <hr><br>
     <pre><h3> 웹프로그래밍</h3> - 201907033 김혜인 - </pre><br>
-    <hr>
-    <ul>
-    <li><a href="indeximg.PNG">2주차</a></li>
-    <li><a href="test.php">3주차</a></li>
-    <li><a href="p3-2.html">4주차예제</a></li>
-    <li><a href="p3-2_a.html">4주차심화</a></li>
-    <li><a href="p3-3.php">4주차(p3-3.php)</a></li>
-    </ul>
-    <hr>
-    <PRE>
-      <h3>< 주의 사항 ></h3>    - Unix 서버에서는 대소문자 구분함
-    - 파일의 확장자 정확히 구분
-    - 파일탐색기 > 보기 > 옵션
-       -- 알려진 파일형식 확장자
-          숨기기 선택 해제
-    - 파일명은 영문자로 시작하기를 권고
-    </PRE>
-    <hr>
+    <a href="rep1/join_form.php">회원가입</a>
   </body>
 </html>
