rep1 index.html

--- a/Yuhan/index.html
+++ b/Yuhan/index.html
@@ -9,6 +9,6 @@
   <body>
     <hr><br>
     <pre><h3> 웹프로그래밍</h3> - 201907033 김혜인 - </pre><br>
-    <a href="rep1/join_form.php">회원가입</a>
+    <a href="./rep1/join_form.php">회원가입</a>
   </body>
 </html>
