--- a/Yuhan/10주차/rep2/index.html
+++ b/Yuhan/10주차/rep2/index.html
@@ -5,6 +5,7 @@
     <title>rep2 index</title>
   </head>
   <body>
-    <a href="login_form.php">로그인</a>
+    <a href="login_form.php">로그인</a><br>
+    <a href="login_form2.php">로그인2</a>
   </body>
 </html>
